--- a/package.json
+++ b/package.json
@@ -10,12 +10,66 @@
     "react-scripts": "2.0.3",
     "react-testing-library": "5.3.1"
   },
-  "devDependencies": {},
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.6",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "9.0.0",
+    "babel-jest": "^23.6.0",
+    "babel-plugin-module-resolver": "^3.1.1",
+    "concurrently": "^4.1.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-react-app": "^3.0.5",
+    "eslint-plugin-flowtype": "^3.2.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint": "5.6.0",
+    "flow-bin": "^0.88.0",
+    "flow-copy-source": "^2.0.2",
+    "flow-mono-cli": "^1.4.3",
+    "flow-typed": "^2.5.1",
+    "flow-watch": "^1.1.3",
+    "husky": "^1.1.4",
+    "lerna": "^3.5.1",
+    "lint-staged": "^8.0.5",
+    "stylelint-config-standard": "^18.2.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-order": "^2.0.0",
+    "stylelint-processor-styled-components": "^1.5.1",
+    "stylelint": "^9.8.0",
+    "test": "jest"
+  },
   "scripts": {
+    "postinstall": "flow-typed install --overwrite && flow-mono install-types",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "test": "jest",
+    "eject": "react-scripts eject",
+    "flow": "flow",
+    "flow:watch": "flow-watch",
+    "lint": "eslint .",
+    "stylelint": "stylelint **/*.js"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
