--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@emotion/core": "^10.0.4",
+    "@emotion/styled": "^10.0.4",
     "react": "16.7.0-alpha.2 - next",
     "react-dom": "16.7.0-alpha.2 - next",
     "react-scripts": "2.0.3",
-    "react-testing-library": "5.3.1"
+    "react-testing-library": "5.3.1",
+    "vanilla-tilt": "^1.5.0"
   },
   "husky": {
     "hooks": {
@@ -33,13 +36,13 @@
     "babel-jest": "^23.6.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "concurrently": "^4.1.0",
+    "eslint": "5.6.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-react-app": "^3.0.5",
     "eslint-plugin-flowtype": "^3.2.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
-    "eslint": "5.6.0",
     "flow-bin": "^0.88.0",
     "flow-copy-source": "^2.0.2",
     "flow-mono-cli": "^1.4.3",
@@ -48,11 +51,11 @@
     "husky": "^1.1.4",
     "lerna": "^3.5.1",
     "lint-staged": "^8.0.5",
+    "stylelint": "^9.8.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-order": "^2.0.0",
     "stylelint-processor-styled-components": "^1.5.1",
-    "stylelint": "^9.8.0",
     "test": "jest"
   },
   "scripts": {
